--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -7,7 +7,7 @@
                 <a href="#" class="social__item"><img src="./img/icons/facebook.svg" alt="facebook"></a>
                 <a href="#" class="social__item"><img src="./img/icons/twitter.svg" alt="twitter"></a>
                 <a href="#" class="social__item"><img src="./img/icons/be.svg" alt="be"></a>
-                <a href="#" class="social__item"><img src="../img/icons/ball.svg" alt=ball""></a>
+                <a href="#" class="social__item"><img src="./img/icons/ball.svg" alt=ball""></a>
                 <a href="#" class="social__item"><img src="./img/icons/instagram.svg" alt="instagram"></a>
             </div>
         </div>
